--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 <body>
   <h1>Hello, world!</h1>
   <p>This is my first GitHub Pages site.</p>
+  <section>
+  	<h1>Short introduction</h1>
+  	<p>Hello. I'm a computer science student.</p>
+  </section>
 </body>
 </html>
